--- a/Frontend/src/app/cms/pages/budgets/create/create-budget/create-budget.component.html
+++ b/Frontend/src/app/cms/pages/budgets/create/create-budget/create-budget.component.html
@@ -1,13 +1,11 @@
 <div class="container">
     <div class="card p-5">
         <div class="card-body">
-            <h5 class="card-title">Generar Cotización</h5>
-            <a (click)=" returnToList()" class="btn btn-secondary mb-3">
+            <h5 class="card-title">Actualizar Cotización</h5>
+            <a href="" class="btn btn-secondary mb-3">
                 <i class="fas fa-arrow-left"></i> Regresar
             </a>
             <form action="" method="POST">
-
-
                 <!-- Pestañas -->
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
@@ -22,7 +20,6 @@
                         <a class="nav-link" id="productos-tab" data-bs-toggle="tab" href="#productos" role="tab"
                             aria-controls="productos" aria-selected="false">Productos / Servicios</a>
                     </li>
-
                     <li class="nav-item" role="presentation">
                         <a class="nav-link" id="observaciones-tab" data-bs-toggle="tab" href="#observaciones" role="tab"
                             aria-controls="observaciones" aria-selected="false">Observaciones</a>
@@ -30,14 +27,13 @@
                 </ul>
                 <div class="tab-content" id="myTabContent">
                     <!-- Pestaña Cliente -->
-                    <div class="tab-pane fade show active" id="clientes" role="tabpanel"
-                        aria-labelledby="clientes-tab">
-                        <app-client (clientData)="receiveClient($event)"></app-client>
+                    <div class="tab-pane fade show active" id="clientes" role="tabpanel" aria-labelledby="clientes-tab">
+                        <app-client  (clientData)="receiveClient($event)"></app-client>
                     </div>
 
                     <!-- Pestaña Detalles -->
                     <div class="tab-pane fade" id="detalles" role="tabpanel" aria-labelledby="detalles-tab">
-                        <app-detail  (projectData)="receiveProject($event)" [total_budget]="total_budget"></app-detail>
+                        <app-detail  (projectData)="receiveProject($event)"></app-detail>
                     </div>
 
                     <!-- Pestaña Productos -->
@@ -45,7 +41,7 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-12 mt-5">
-                                    <label for="">Selecciona la moneda</label>
+                                    <label for="currency">Selecciona la moneda</label>
                                 </div>
                                 <div class="col-12">
                                     <select name="currency" id="currency" class="form-control" [(ngModel)]="currency"
@@ -58,32 +54,56 @@
                         </div>
 
                         <app-products [total_budget]="total_budget" [total_services]="total_services"
-                            [currency]="currency" (totalSupplies)="receiveTotalSupplies($event)" (productsData)="receiveProducts($event)" (total_iva)="receiveTotalIva($event)" (delivery_cost)="receiveDeliveryCost($event)"></app-products>
+                            [currency]="currency" [products]="products" (totalSupplies)="receiveTotalSupplies($event)"
+                            (productsData)="receiveProducts($event)" (deliveryCost)="receiveDeliveryCost($event)"
+                            (totalIva)="receiveTotalIva($event)" [delivery_cost]="delivery_cost">
+                        </app-products>
                         <app-services [total_budget]="total_budget" [total_supplies]="total_supplies"
-                            [currency]="currency" (totalServices)="receiveTotalServices($event)" (servicesData)="receiveServices($event)"></app-services>
+                            [currency]="currency" [services]="services" (totalServices)="receiveTotalServices($event)"
+                            (servicesData)="receiveServices($event)" [total_services]="total_services"
+                            (AIUFields)="receiveAIU($event)" [AIU]="AIU" (servicesIva)="receiveServicesIva($event)" [services_iva]="services_iva">
+                        </app-services>
 
                         <div class="container">
                             <div class="row">
                                 <div class="col-12 mt-5">
-                                    <h5>Total de Cotización: 
-                                        <input type="number" value="000" id="total_budget" [(ngModel)]="total_budget" [ngModelOptions]="{standalone: true}"
-                                               class="form-control bg-dark text-white text-center w-100" style="font-size: 1.25rem; padding: 0.5rem;">
+                                    <h5>Total de Cotización:
+                                        <input type="number" value="000" id="total_budget" [(ngModel)]="total_budget"
+                                            [ngModelOptions]="{standalone: true}"
+                                            class="form-control bg-dark text-white text-center w-100"
+                                            style="font-size: 1.25rem; padding: 0.5rem;">
                                     </h5>
                                 </div>
-                                
+                                <div class="mb-3 mt-3">
+                                    <label for="project_payment_methods_notes" class="form-label">Métodos de
+                                        pago</label>
+                                    <div class="d-flex">
+                                        <label for="advance_payment_percentage" class="mr-2">Porcentaje de
+                                            anticipo:</label>
+                                        <input type="number" class="form-control bg-dark text-white text-center"
+                                            style="width: 20%; margin-left: 5px; margin-right: 5px;"
+                                            id="advance_payment_percentage" name="advance_payment_percentage"
+                                            [(ngModel)]="advance_payment_percentage"
+                                            (input)="calculateAdvancePayment()">
+                                        <label for="advance_payment_value" class="ml-2 mr-2">Valor:</label>
+                                        <input type="number" class="form-control bg-dark text-white text-center"
+                                            style="width: 20%; margin-left: 5px; margin-right: 5px;"
+                                            id="advance_payment_value" name="advance_payment_value" readonly
+                                            [(ngModel)]="advance_payment_value">
+                                    </div>
+                                </div>
                             </div>
                         </div>
-
                     </div>
 
                     <!-- Pestaña Observaciones -->
                     <div class="tab-pane fade" id="observaciones" role="tabpanel" aria-labelledby="observaciones-tab">
-                        <app-observations  (observationData)="receiveObservation($event)"></app-observations>
-
+                        <app-observations 
+                            (observationData)="receiveObservation($event)"></app-observations>
                     </div>
                 </div>
-                <button type="button" class="btn btn-primary w-100" id="create_budget" (click)="sendBudget()" [hidden]="sending">Generar cotización</button>
-
+                <button type="button" class="btn btn-primary w-100" id="update_budget"
+                    (click)="sendBudget()">Generar cotización</button>
             </form>
         </div>
     </div>
